agregado varias cosas y actualizacion